Toggle to test with higher dat arate limit.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -36262,6 +36262,9 @@
         }
       }
     },
+    "Higher data rate limit" : {
+
+    },
     "Highest bitrate" : {
       "localizations" : {
         "de" : {
