Toggle to use audio for timestamps.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -75048,6 +75048,9 @@
         }
       }
     },
+    "Use audio for timestamps" : {
+
+    },
     "Use game controllers to zoom, set scene, and more, from a distance." : {
       "localizations" : {
         "de" : {
