Make mic from settings work on Mac.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -45850,6 +45850,7 @@
       }
     },
     "Mic orientation %@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
